wp-content/themes/grandblog/css/screen.css
/* ... */
#page_content_wrapper .sidebar .content .posts.blog li strong.header, #page_content_wrapper .posts.blog li strong.header, .page_content_wrapper .sidebar .content .posts.blog li strong.header, .page_content_wrapper .posts.blog li strong.header
{
	font-weight: normal;
}

#cover_content
{
	position:fixed;top:20%;left:40px;z-index:9;
}

#page_content_wrapper .sidebar .content .textwidget, .page_content_wrapper .sidebar .content .textwidget
{
	margin-top: 0;
	padding: 20px 0 0 0;
}

.textwidget img
{
	max-width: 100%;
	height: auto;
}

.widget_search input#searchsubmit
{
	margin: 10px 0 0 0;
}

.widget_tag_cloud div, .tag_cloud
{
	margin: 20px 0 10px 0;	
}

.widget_tag_cloud div a, .meta-tags a, .tag_cloud a
{
	display: inline-block;
	-webkit-transition: background .2s linear, border .1s linear;
	-moz-transition: background .2s linear, border .1s linear;
	-ms-transition: background .2s linear, border .1s linear;
	-o-transition: background .2s linear, border .1s linear;
	transition: background .2s linear, border .1s linear;
	
	font-size: 9px !important;
	letter-spacing: 2px;
	text-transform: uppercase;
	margin: 0 3px 5px 0;
	padding: 6px 9px 6px 9px;
	background: #fff;
	color: #555;
}

#post_featured_slider
{
	margin-top: -1px;
	-webkit-transition: all 0.6s ease;
	-moz-transition: all 0.6s ease;
	-o-transition: all 0.6s ease;
	-ms-transition: all 0.6s ease;
	transition: all 0.6s ease;
	margin-top: -80px;
}

#post_featured_slider li .slider_image
{
	width: 100%;
	height: 500px;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	position: relative;
}

#post_featured_slider li .slider_image.three_cols
{
	width: 33.3%;
	float: left;
	height: 450px;
}

#post_featured_slider li .slide_post
{
	padding: 30px 20px 30px 20px;
	box-sizing: border-box;
	text-align: center;
	background: #fff;
	float: left;
}

#post_featured_slider li .slider_image .slide_post .slide_post_date
{
	font-style: italic;
	color: #999;
}

#post_featured_slider.three_cols li .slide_post
{
	padding: 15px 10px 15px 10px;
	width: 100%;
	position: absolute;
	bottom: 0;
	background: rgba(256,256,256,0.9);
}

#post_featured_slider.three_cols
{
	margin-bottom: 60px;
}

#post_featured_slider li .slide_post h2
{
	font-size: 40px;
	font-weight: 900;
}

#post_featured_slider.three_cols li .slide_post h2
{
	font-size: 20px;
}

#post_featured_slider li .slide_post .slide_post_excerpt
{
	margin: auto;
	width: 70%;
	font-style: italic;
	font-size: 18px;
}

.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget iframe
{
	max-width: 100%;
	height: auto;
}

/*------------------------------------------------------------------
[10. Grid Columns Elements]
*/

.one_half
{
	float: left;
	width: 48%;
	margin-right: 3.5%;
	box-sizing: border-box;
}

.one_half.last
{
	float: right;
	width: 48%;
	margin-right: 0;
	clear: right;
}

.portfolio2filter_wrapper
{
	overflow: hidden;
	margin: 0 12px 0 0;
	float: left;
}

.one_half.portfolio2_wrapper
{
	width: 50%;
	margin-bottom: 0px;
}

.two_cols.gallery .element
{
	width: 47.8%;
	margin-right: 2%;
	margin-bottom: 2%;
	box-sizing: border-box;
	
	-webkit-transition: .3s ease-in-out;
	-moz-transition: .3s ease-in-out;
	-o-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
	
	opacity: 1 !important;
}

.two_cols.gallery.wide .element
{
	width: 50%;
	margin: 0 -1px 0 0;
}

.two_cols.gallery.wide .element img
{
	width: 100%;
	height: auto;
}

.two_cols.gallery .element.fade
{
	opacity: 0.2 !important;
}

.one_half.gallery2
{
	width: 100%;
	height: 100%;
	float: left;
	margin: 0;
	overflow: hidden;
	position: relative;
}

.one_half.gallery2.static
{
	overflow: hidden;
}

.one_half.gallery2 a
{
	position: relative;
	display: block;
	line-height: 0;
}

.element.classic2_cols
{
	overflow: hidden;
	position: relative;
    width: 49.8%;
    height: auto;
    margin-right: 1px;
	margin-bottom: 1px;
	float: left;
}

.one_half.gallery2.filterable.portfolio_type
{
	margin: 0;
}

.one_half.gallery2 a
{
	display: block;
}

.one_half.gallery2.classic a
{
	overflow: hidden;
	width: 100%;
	height: 100%;
	position: relative;
}

.one_half.gallery2.classic a:hover .portfolio_classic_icon_wrapper
{
	opacity: 1;
}

.one_third
{
	width: 30.99%;
	float: left;
	margin-right: 3.5%;
	margin-bottom: 2%;
	position: relative;
	box-sizing: border-box;
}

.one_third.last
{
	margin-right: 0 !important;
	float: right;
	width: 30.99%;
}

.one_third.portfolio3_wrapper
{
	width: 30%;
	margin-bottom: 0;
	margin-right: 25px;
}

#page_content_wrapper .inner .sidebar_content ul, .page_content_wrapper .inner .sidebar_content ul
{
	margin-left: 20px;
}

#page_content_wrapper .inner .sidebar_content ul.review-list, .page_content_wrapper .inner .sidebar_content ul.review-list
{
	margin-left: 0;
}

#page_content_wrapper .inner .sidebar_content.full_width.portfolio3_content_wrapper
{
	width: 1250px;
}

#page_content_wrapper .inner .sidebar_content.full_width.portfolio4_content_wrapper, .page_content_wrapper.portfolio4_content_wrapper
{
	width: 1260px;
}

.page_content_wrapper.portfolio4_content_wrapper
{
	margin-top: 50px;
}

.gallery_a_title
{
	text-align: center;
}

.three_cols.gallery .element
{
	width: 31.2%;
	margin-right: 2%;
	margin-bottom: 2%;
	padding: 0;
	box-sizing: border-box;
	
	-webkit-transition: .3s ease-in-out;
	-moz-transition: .3s ease-in-out;
	-o-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
	
	opacity: 1 !important;
	position: relative;
}

.three_cols.gallery.wide .element
{
	width: 33.33%;
	margin: 0 -1px 0 0;
}

.three_cols.gallery.wide .element img
{
	width: 100%;
	height: auto;
}

.sidebar_content.three_cols.gallery .element
{
	width: 46%;
	margin-right: 3%;
	margin-bottom: 4%;
}

.three_cols.gallery .element.grid
{
	padding: 0;
}

.three_cols.gallery .element.fade
{
	opacity: 0.2 !important;
}
/* ... */

